<resources>
    <string name="app_name">HoneyOnix</string>

    <!--Pantalla de inicio-->
    <string name="title">Honey Onix</string>
    <string name="text">¡Endulza tu vida con los productos naturales de nuestra colmena!</string>
    <string name="btn_start">Comenzar</string>
    <string name="no_data">Bienvenido</string>
    <string name="sign_in">Comenzar</string>
    <string name="register">Registrate</string>
    <string name="login">Login</string>

    <string name="dont_have_account">No tienes cuenta?</string>
    <string name="Buscar...">Buscar...</string>
    <string name="already_have_account">Ya tienes cuenta?</string>
    <string name="email">Correo</string>
    <string name="password">Contraseña</string>
    <string name="Olvide_mi_contra">Olvidaste tu contraseña?</string>
    <string name="create_account">Crear cuenta </string>
    <string name="recuperar">Recuperar Contraseña </string>
    <string name="id_cliente">361752021224-jbjscf5m9hhbj3l0o1g94q13khni1d9f.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="txtAgregarProductos">Add products</string>
    <string name="etNombre">Product name</string>
    <string name="etDescripcion">Description</string>
    <string name="etCategoria">Category</string>
    <string name="etPrecio">Price</string>
    <string name="etDescuento">Discount</string>
    <string name="etPrecioConDescuento">Price with discount applied</string>
    <string name="etNotaDescuento">E.g.: 10% Off</string>
    <string name="btnAgregarProducto">Add product</string>

</resources>