<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InicioActivity"
    android:background="@drawable/fondo">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!--Logotipo y nombre de la app-->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:id="@+id/linear1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/black"
                        android:orientation="vertical"
                        android:padding="50dp">

                        <ImageView
                            android:id="@+id/logo"
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            android:layout_marginStart="35dp"
                            android:layout_marginEnd="35dp"
                            app:srcCompat="@drawable/logo_abeja"
                            app:tint="@color/white" />

                        <TextView
                            android:id="@+id/logoTxt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/title"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="45sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <!--Frase publicitaria-->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:id="@+id/linear2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/publicidadTxt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="30dp"
                            android:layout_marginTop="30dp"
                            android:layout_marginEnd="30dp"
                            android:text="@string/text"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="55sp"
                            android:textStyle="bold" />

                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <!--Incio del btn continuar-->
                <androidx.cardview.widget.CardView
                    android:id="@+id/cvGetStarted"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="55dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="45dp"
                    android:layout_marginBottom="60dp"
                    app:cardBackgroundColor="@color/black"
                    app:cardCornerRadius="30dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <LinearLayout
                        android:id="@+id/linear3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="230dp"
                            android:layout_height="match_parent"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="10dp"
                            android:gravity="center"
                            android:text="@string/btn_start"
                            android:textColor="@color/white"
                            android:textSize="26sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:src="@drawable/arrow_right" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
